--- a/src/app/channels/channel/channel.component.html
+++ b/src/app/channels/channel/channel.component.html
@@ -1,4 +1,5 @@
 <p>
   Channel: <strong> {{channel.name}} </strong>
   ID Channel: <strong>{{channel.id}}</strong>
+  <button class="btn" (click)="deleteChannel(channel.id)"> Del </button>
 </p>
