--- a/src/app/channels/channel-list/channel-list.component.html
+++ b/src/app/channels/channel-list/channel-list.component.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div *ngFor="let currentChannel of channelList">
+  <app-channel [channel]="currentChannel"></app-channel>
+</div>
