ajoute channelList dans la colonne de gauche

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <section>
   <app-channel-form></app-channel-form>
-  <!-- Nouveau component a inserer ici-->
+  <app-channel-list></app-channel-list>
 </section>
 
 <aside>
