--- a/src/app/channels/channel/channel.component.html
+++ b/src/app/channels/channel/channel.component.html
@@ -1,5 +1,7 @@
-<p>
-  Channel: <strong> {{channel.name}} </strong>
-  ID Channel: <strong>{{channel.id}}</strong>
-  <button class="btn" (click)="deleteChannel(channel.id)"> Del</button>
-</p>
+<div>
+  <p>
+    Channel n°<strong>{{channel.id}}</strong> :
+    <strong> {{channel.name}} </strong>
+  </p>
+  <button class="btn" (click)="deleteChannel(channel.id)"> Join</button>
+</div>
