mise en page amelioree

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <h1>G-Messenger</h1>
 
 <section>
+  <h2>Channel space</h2>
   <app-channel-form></app-channel-form>
   <app-channel-list></app-channel-list>
 </section>
 
 <aside>
+  <h2>Messages</h2>
   <app-message-list></app-message-list>
   <app-message-form></app-message-form>
 </aside>
