--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,18 +1,33 @@
-section {
+section
+{
   margin: 10px;
   width: 310px;
   float: left;
   height: 100%;
 }
 
-aside {
-  margin-left: 330px;
+aside
+{
+  margin-left: 340px;
+  background-color: rgb(240, 240, 255);
 }
 
-h1 {
+h1
+{
   text-align: center;
   color: #132688;
   background-color: rgb(240, 240, 255);
   margin: 0px;
   padding: 10px;
+}
+
+h2
+{
+  color: #1045ff;
+}
+
+aside h2
+{
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
