seb: modif channel service

--- a/src/app/channels/channel/channel.component.html
+++ b/src/app/channels/channel/channel.component.html
@@ -4,5 +4,5 @@
     <strong> {{channel.name}} </strong>
   </p>
 
-  <button class="btn" (click)="deleteChannel(channel.id)"> Join</button>
+  <button class="btn" (click)="joinChannel(channel.id)"> Join</button>
 </div>
