--- a/src/app/channels/channel/channel.component.html
+++ b/src/app/channels/channel/channel.component.html
@@ -1,7 +1,7 @@
 <div>
   <p>
     Channel n°<strong>{{channel.id}}</strong> :
-    <strong> {{channel.name}} </strong>
+    {{channel.name}}
   </p>
 
   <button class="btn" (click)="joinChannel(channel.id)"> Join</button>
