--- a/src/app/channel-form/channel-form.component.css
+++ b/src/app/channel-form/channel-form.component.css
@@ -1,6 +1,6 @@
 p
 {
-   margin: 0px;
+  margin: 0px;
 }
 
 strong
@@ -9,9 +9,27 @@ strong
   text-decoration:underline;
 }
 
-button
+.create_channel button
 {
-  margin-top: 5px;
+ margin-top: 5px;
+ width: 100%;
+ margin-bottom: 20px;
+}
+
+.previous_page
+{
+  float: left;
+}
+
+.next_page
+{
+  float: right;
+}
+
+.p_footer
+{
+  clear: both;
   width: 100%;
+  text-align: center;
   margin-bottom: 20px;
 }
