--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -31,3 +31,37 @@ aside h2
   margin-top: 10px;
   margin-bottom: 20px;
 }
+
+
+.previous_page {
+  float: left;
+  width: auto;
+  text-align: left;
+  display: inline-block;
+  background: #eaeff2;
+  border-radius: 4px;
+  padding: 0.3em 0.8em;
+}
+
+.next_page {
+  width: auto;
+  float: right;
+  text-align: right;
+  display: inline-block;
+  background: #eaeff2;
+  border-radius: 4px;
+  box-shadow: inset 0 -1px #bbbfc2;
+  color: #4d4353;
+  padding: 0.3em 0.8em
+}
+
+.p_footer {
+  float: left;
+  width: 75%;
+  text-align: center;
+  display: inline-block;
+}
+
+.breaker {
+  clear: both;
+}
