--- a/src/app/channels/channel-form/channel-form.component.css
+++ b/src/app/channels/channel-form/channel-form.component.css
@@ -1,35 +1,56 @@
-p
-{
+html {
+  margin-bottom: 20px;
+}
+
+p {
   margin: 0px;
 }
 
-strong
-{
+strong {
   margin: 0px;
-  text-decoration:underline;
+  text-decoration: underline;
 }
 
-.create_channel button
-{
- margin-top: 5px;
- width: 100%;
- margin-bottom: 20px;
-}
-
-.previous_page
-{
-  float: left;
-}
-
-.next_page
-{
-  float: right;
-}
-
-.p_footer
-{
-  clear: both;
+.create_channel button {
+  margin-top: 5px;
   width: 100%;
+  margin-bottom: 20px;
+}
+
+.select_page {
+
+}
+
+.previous_page {
+  float: left;
+  width: auto;
+  text-align: left;
+  display: inline-block;
+  background: #eaeff2;
+  border-radius: 4px;
+  padding: 0.3em 0.8em;
+}
+
+.next_page {
+  width: auto;
+  float: right;
+  text-align: right;
+  display: inline-block;
+  background: #eaeff2;
+  border-radius: 4px;
+  box-shadow: inset 0 -1px #bbbfc2;
+  color: #4d4353;
+  padding: 0.3em 0.8em
+}
+
+.p_footer {
+  float: left;
+  width: 75%;
   text-align: center;
+  display: inline-block;
+}
+
+.breaker {
+  clear: both;
   margin-bottom: 20px;
 }
