--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -32,36 +32,19 @@ aside h2
   margin-bottom: 20px;
 }
 
-
-.previous_page {
+.previous_page
+{
   float: left;
-  width: auto;
-  text-align: left;
-  display: inline-block;
-  background: #eaeff2;
-  border-radius: 4px;
-  padding: 0.3em 0.8em;
 }
 
-.next_page {
-  width: auto;
+.next_page
+{
   float: right;
-  text-align: right;
-  display: inline-block;
-  background: #eaeff2;
-  border-radius: 4px;
-  box-shadow: inset 0 -1px #bbbfc2;
-  color: #4d4353;
-  padding: 0.3em 0.8em
 }
 
-.p_footer {
-  float: left;
-  width: 75%;
+.p_footer
+{
+  width: 100%;
   text-align: center;
-  display: inline-block;
-}
-
-.breaker {
-  clear: both;
+  margin-bottom: 20px;
 }
