--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,49 +1,42 @@
-section
-{
+section {
   margin: 10px;
   width: 310px;
   float: left;
   height: 100%;
 }
 
-aside
-{
+aside {
   margin-left: 340px;
   background-color: rgb(240, 240, 255);
 }
 
-h1
-{
+h1 {
+  margin: 0;
+  padding: 10px;
+  border-bottom: 1px solid black;
+  background-color: rgb(240, 240, 255);
   text-align: center;
   color: #132688;
-  background-color: rgb(240, 240, 255);
-  margin: 0px;
-  padding: 10px;
 }
 
-h2
-{
+h2 {
   color: #1045ff;
 }
 
-aside h2
-{
+aside h2 {
   margin-top: 10px;
   margin-bottom: 20px;
 }
 
-.previous_page
-{
+.previous_page {
   float: left;
 }
 
-.next_page
-{
+.next_page {
   float: right;
 }
 
-.p_footer
-{
+.p_footer {
   width: 100%;
   text-align: center;
   margin-bottom: 20px;
