--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,5 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 /* You can add global styles to this file, and also import other style files */
+font {
+  font-family: "Calibri Light", Helvetica, sans-serif;
+}
