--- a/src/app/channels/private-channel-list/private-channel-list.component.html
+++ b/src/app/channels/private-channel-list/private-channel-list.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let currentChannel of privateChannelList">
-  <app-channel [channel]="currentChannel"></app-channel>
+  <app-private-channel [privateChannel]="currentChannel"></app-private-channel>
 </div>
