--- a/src/app/channels/private-channel/private-channel.component.html
+++ b/src/app/channels/private-channel/private-channel.component.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div>
+  <p>
+    <strong>{{privateChannel}}</strong>
+  </p>
 
-</body>
-</html>
+  <button class="btn" (click)="joinChannel(privateChannel)">Join</button>
+</div>
