--- a/src/app/messages/message-form/message-form.component.html
+++ b/src/app/messages/message-form/message-form.component.html
@@ -1,6 +1,10 @@
-<p>
+<div>
   <input type="text" class="form-control" id="name" required [(ngModel)]="message.content" name="name">
-  <button class="btn btn-primary" (click)="sendMessage()"> Send</button>
+  <div *ngIf="channelType2 === 0">
+    <button class="btn btn-primary" (click)="sendMessage()"> Send</button>
+  </div>
 
-
-</p>
+  <div *ngIf="channelType2 === 1">
+    <button class="btn btn-primary" (click)="sendPrivateMessage()"> Send</button>
+  </div>
+</div>
