seb: ajout de la possibilité d'envoyer des message privées entre users

--- a/src/app/messages/message-form/message-form.component.html
+++ b/src/app/messages/message-form/message-form.component.html
@@ -1,10 +1,11 @@
 <div>
-  <input type="text" class="form-control" id="name" required [(ngModel)]="message.content" name="name">
   <div *ngIf="channelType2 === 0">
+    <input type="text" class="form-control" id="name" required [(ngModel)]="message.content" name="name">
     <button class="btn btn-primary" (click)="sendMessage()"> Send</button>
   </div>
 
   <div *ngIf="channelType2 === 1">
+    <input type="text" class="form-control" id="nom" required [(ngModel)]="privatemessage.content" name="name">
     <button class="btn btn-primary" (click)="sendPrivateMessage()"> Send</button>
   </div>
 </div>
