ajout des émoticones et de la météo (developpement)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,7 @@
 
     <app-message-list></app-message-list>
     <app-message-form></app-message-form>
+    <app-weather></app-weather>
   </aside>
 </div>
 
@@ -46,5 +47,6 @@
 
     <app-message-list></app-message-list>
     <app-message-form></app-message-form>
+    <app-weather></app-weather>
   </aside>
 </div>
