ajout page selector private message

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
       <button class="next_page" (click)="nextMessages()">&#62;</button>
     </div>
 
-    <p class="p_footer">Page n°{{messageService.pageNumber}}</p>
+    <p class="p_footer">Page n°{{privateMessageService.pageNumber}}</p>
 
     <app-message-list></app-message-list>
     <app-message-form></app-message-form>
