--- a/src/app/channels/channel/channel.component.html
+++ b/src/app/channels/channel/channel.component.html
@@ -1,8 +1,6 @@
-<div>
-  <p>
-    Channel n°<strong>{{channel.id}}</strong> :
-    {{channel.name}}
-  </p>
-
-  <button class="btn" (click)="joinChannel(channel.id)"> Join</button>
+<div class="channel-root">
+  <div class="channel-info">
+    Channel n°<strong>{{channel.id}}</strong> : {{channel.name}}
+  </div>
+  <button class="channel-btn" (click)="joinChannel(channel.id)">Join</button>
 </div>
