--- a/src/app/messages/message-form/message-form.component.html
+++ b/src/app/messages/message-form/message-form.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div *ngIf="channelType2 === 1">
-    <input type="text" class="form-control" id="nom" required [(ngModel)]="privatemessage.content" name="name">
+    <input type="text" class="form-control" id="nom" required [(ngModel)]="privatemessage.content" (keyup.enter)="sendPrivateMessage()" name="name">
     <button class="btn btn-primary" (click)="sendPrivateMessage()"> Send</button>
   </div>
 </div>
