--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,9 @@
   <section>
     <h2>Public Channel space</h2>
     <app-channel-form></app-channel-form>
-    <app-channel-list></app-channel-list>
+    <div class="channel-list">
+      <app-channel-list></app-channel-list>
+    </div>
   </section>
 
   <aside>
