--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -24,6 +24,13 @@ aside {
   z-index: 1;
 }
 
+.channel-list {
+  padding-bottom: 2px;
+  height: 400px;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
 .nav-bar-btn {
   display: inline-block;
   vertical-align: center;
