--- a/src/app/messages/message-form/message-form.component.html
+++ b/src/app/messages/message-form/message-form.component.html
@@ -1,11 +1,13 @@
 <div>
   <div *ngIf="channelType2 === 0">
-    <input type="text" class="form-control" id="name" required [(ngModel)]="message.content" (keyup.enter)="sendMessage()" name="name">
+    <input type="text" class="form-control" id="name" required [(ngModel)]="message.content"
+           (keyup.enter)="sendMessage()" name="name">
     <button class="btn btn-primary" (click)="sendMessage()"> Send</button>
   </div>
 
-  <div *ngIf="channelType2 === 1">
-    <input type="text" class="form-control" id="nom" required [(ngModel)]="privatemessage.content" (keyup.enter)="sendPrivateMessage()" name="name">
-    <button class="btn btn-primary" (click)="sendPrivateMessage()"> Send</button>
+  <div class="form-root" *ngIf="channelType2 === 1">
+    <input type="text" class="form-control" id="nom" required [(ngModel)]="privatemessage.content"
+           (keyup.enter)="sendPrivateMessage()" name="name">
+    <button class="btn btn-primary" (click)="sendPrivateMessage()">Send</button>
   </div>
 </div>
