--- a/src/app/messages/message/message.component.html
+++ b/src/app/messages/message/message.component.html
@@ -1,11 +1,11 @@
 <div>
   <p>Message:</p>
   <div *ngFor="let currentMessage of stringList">
-    <strong *ngIf=isAnUrl(currentMessage)>
+    <strong *ngIf="isAnUrlToLoad(currentMessage)">
       <iframe [src]="result | safe"></iframe><br>
-      <a href={{currentMessage}}>{{currentMessage}}</a>
     </strong>
-    <strong *ngIf=notUrl(currentMessage)>{{currentMessage}}</strong>
+    <strong *ngIf="notUrl(currentMessage)">{{currentMessage}}</strong>
+    <strong *ngIf="isAnUrl(currentMessage)"><a href={{currentMessage}}>{{currentMessage}}</a></strong>
   </div>
   <p><br>  From: <strong>{{message.from}}</strong></p>
 </div>
