--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
 <div *ngIf="channelType === 1">
   <section>
     <h2 class="private-channel-space">Private Channel space</h2>
-    <div class="channel-list">
+    <div class="private-channel-list">
       <app-private-channel-list></app-private-channel-list>
     </div>
   </section>
