--- a/src/app/channels/private-channel/private-channel.component.html
+++ b/src/app/channels/private-channel/private-channel.component.html
@@ -3,5 +3,5 @@
     <strong>{{privateChannel}}</strong>
   </p>
 
-  <button class="btn" (click)="joinChannel(privateChannel)">Join</button>
+  <button class="btn btn-primary" (click)="joinChannel(privateChannel)">Join</button>
 </div>
