--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -38,6 +38,13 @@ aside {
   overflow-y: scroll;
 }
 
+.private-channel-list {
+  padding-bottom: 2px;
+  height: 500px;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
 .nav-bar-btn {
   display: inline-block;
   vertical-align: center;
