--- a/src/app/messages/message/message.component.html
+++ b/src/app/messages/message/message.component.html
@@ -3,11 +3,10 @@
   <div *ngFor="let currentMessage of stringList">
     <img *ngIf="isAnImage(currentMessage)" [src]="currentMessage">
     <br *ngIf="isAnImage(currentMessage)">
-    <strong *ngIf="isAnUrlToLoad(currentMessage)">
-      <iframe [src]="result | safe"></iframe><br>
-    </strong>
+    <iframe *ngIf="isAnUrlToLoad(currentMessage)" [src]="result | safe"></iframe>
     <strong *ngIf="notUrl(currentMessage)">{{currentMessage}}</strong>
-    <strong *ngIf="isAnUrl(currentMessage)"><a href={{currentMessage}}>{{currentMessage}}</a></strong>
+    <a *ngIf="isAnUrl(currentMessage)" href={{currentMessage}}>{{currentMessage}}</a>
+    <br *ngIf="isAnUrl(currentMessage)">
   </div>
-  <p><br>  From: <strong>{{message.from}}</strong></p>
+  <p><br>From: <strong>{{message.from}}</strong></p>
 </div>
