--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -26,7 +26,15 @@ aside {
 
 .channel-list {
   padding-bottom: 2px;
+  width: 310px;
   height: 400px;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
+.private-channel-list {
+  padding-bottom: 2px;
+  height: 500px;
   overflow: hidden;
   overflow-y: scroll;
 }
