--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
   <div class="nav-bar-btn">
     <button class="public_channel" (click)="publicChannels()">Public channels</button>
     <button class="private_channel" (click)="privateChannels()">Private channels</button>
+    <button class="logout" (click)="logout()">Logout</button>
   </div>
 </nav>
 
@@ -58,5 +59,5 @@
 <div *ngIf="status === false">
   <input type="text" class="form-control" id="user" required [(ngModel)]="user"
          (keyup.enter)="login()" name="user">
-  <button class="btn btn-primary" (click)="login()">Send</button>
+  <button class="btn btn-primary" (click)="login()">login</button>
 </div>
