css login screen

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -91,3 +91,39 @@ aside h2 {
 .private_channel {
   display: inline;
 }
+
+.login {
+  width: 25%;
+  height: 20%;
+  background-color: #F2F2F2;
+  border: 3px lightgray solid;
+  border-radius: 5px;
+  position: absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: block;
+  margin: auto;
+  padding: 20px 20px 0px 20px;
+}
+
+.login-text {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  font-family: "Calibri Light", Helvetica, sans-serif;
+  font-size: large;
+  font-weight: bold;
+}
+
+.input-login {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.login-input {
+  margin-right: 20px;
+}
