seb: modif numero de page demmarre à 1 au lieu de 0

--- a/src/app/channels/channel-form/channel-form.component.html
+++ b/src/app/channels/channel-form/channel-form.component.html
@@ -13,4 +13,4 @@
   <button class="next_page" (click)="nextChannel()"> &#62; </button>
 </div>
 
-<p class="p_footer">Page n°{{channelService.pageNumber}}</p>
+<p class="p_footer">Page n°{{channelService.pageNumber+1}}</p>
