--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
         <button class="next_page" (click)="nextMessages()">&#62;</button>
       </div>
 
-      <p class="p_footer">Page n°{{messageService.pageNumber}}</p>
+      <p class="p_footer">Page n°{{messageService.pageNumber+1}}</p>
 
       <app-message-list></app-message-list>
       <app-message-form></app-message-form>
