seb: affichage page à 1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
         <button class="next_page" (click)="nextMessages()">&#62;</button>
       </div>
 
-      <p class="p_footer">Page n°{{privateMessageService.pageNumber}}</p>
+      <p class="p_footer">Page n°{{privateMessageService.pageNumber+1}}</p>
 
       <app-message-list></app-message-list>
       <app-message-form></app-message-form>
