--- a/src/app/messages/message-form/message-form.component.html
+++ b/src/app/messages/message-form/message-form.component.html
@@ -17,7 +17,7 @@
 <div *ngIf="hideBol">
   <strong>City :</strong> {{city}} <br>
   <strong>Current temp :</strong> {{currentTemp}}°C <br>
-  <img  [src]="urlImage">
+  <img  *ngIf="urlImage != undefined" [src]="urlImage">
   <strong>Max temp :</strong> {{temp_max}}°C<br>
   <strong>Min temp :</strong> {{temp_min}}°C<br>
   <strong>Description :</strong> {{description}}<br>
