--- a/src/app/messages/message-form/message-form.component.html
+++ b/src/app/messages/message-form/message-form.component.html
@@ -1,24 +1,36 @@
-<div>
-  <div *ngIf="channelType2 === 0">
-    <input type="text" class="form-control" id="name" required [(ngModel)]="message.content"
-           (keyup.enter)="sendMessage()" name="name">
-    <button class="btn btn-primary" (click)="sendMessage()"> Send</button>
+<div class="message-form-root">
+  <div class="input-root" *ngIf="channelType2 === 0">
+
+    <span><input class="message-input style-thick-border" type="text" id="name" name="name"
+                 placeholder="Type your message here..." required [(ngModel)]="message.content"
+                 (keyup.enter)="sendMessage()"></span>
+
+    <button class="send-message-button" (click)="sendMessage()"> Send</button>
+
   </div>
 
-  <div class="form-root" *ngIf="channelType2 === 1">
-    <input type="text" class="form-control" id="nom" required [(ngModel)]="privatemessage.content"
-           (keyup.enter)="sendPrivateMessage()" name="name">
-    <button class="btn btn-primary" (click)="sendPrivateMessage()">Send</button>
+  <div class="input-root" *ngIf="channelType2 === 1">
+
+    <span><input class="message-input style-thick-border" type="text" id="input message" name="name"
+                 placeholder="Type your message here..." required [(ngModel)]="privatemessage.content"
+                 (keyup.enter)="sendPrivateMessage()"></span>
+
+    <button class="send-message-btn" (click)="sendPrivateMessage()">Send</button>
+
   </div>
 </div>
+
 <div>
-  <button class="btn btn-primary" (click)="hide()">{{buttonWeather}}</button>
+  <button class="weather-btn" (click)="hide()">{{buttonWeather}}</button>
 </div>
+
 <div *ngIf="hideBol">
+
   <strong>City :</strong> {{city}} <br>
   <strong>Current temp :</strong> {{currentTemp}}°C <br>
   <img  *ngIf="urlImage != undefined" [src]="urlImage">
   <strong>Max temp :</strong> {{temp_max}}°C<br>
   <strong>Min temp :</strong> {{temp_min}}°C<br>
   <strong>Description :</strong> {{description}}<br>
+
 </div>
