--- a/src/app/messages/message/message.component.css
+++ b/src/app/messages/message/message.component.css
@@ -1,12 +1,43 @@
-div
-{
+iframe, img {
+  width: 300px;
+  height: 300px;
+}
+
+.message-root {
+  width: 98%;
+  color: #F2F2F2;
   text-align: justify;
-  background-color: rgb(221, 234, 235);
   word-wrap: break-word;
 }
 
-iframe, img
-{
-  width: 300px;
-  height: 300px;
+.sender {
+  font-size: larger;
+  margin-left: 2.5%;
+  color: #35363B;
+}
+
+.sender-prefix {
+  font-size: 10px;
+  padding-right: 5px;
+}
+
+.sender-time {
+  text-align: right;
+  color: #F2F2F2;
+}
+
+.message-content {
+  background-color: #64656A;
+  border: none;
+  border-radius: 10px;
+  padding: 1%;
+  margin-bottom: 1%;
+  margin-left: 1%;
+  margin-right: 1%;
+  text-align: justify;
+  width: 100%;
+}
+
+.message-content:hover {
+  background-color: #35363B;
 }
