--- a/src/app/messages/message/message.component.html
+++ b/src/app/messages/message/message.component.html
@@ -1,13 +1,17 @@
-<div>
-  <p>Message:</p>
-  <div *ngFor="let currentMessage of stringList">
-    <img *ngIf="isAnImage(currentMessage)" [src]="currentMessage">
-    <br *ngIf="isAnImage(currentMessage)">
-    <iframe *ngIf="isAnUrlToLoad(currentMessage)" [src]="result | safe"></iframe>
-    <strong *ngIf="notUrl(currentMessage)">{{currentMessage}}</strong>
-    <br *ngIf="isAnUrl(currentMessage)">
-    <a *ngIf="isAnUrl(currentMessage)" href={{currentMessage}} target="_blank">{{currentMessage}}</a>
-    <br *ngIf="isAnUrl(currentMessage)">
+<div class="message-root">
+
+  <div class="sender">
+    <i class="sender-prefix">F r o m  :  </i><strong>{{message.from}}</strong>
   </div>
-  <p><br>From: <strong>{{message.from}}</strong></p>
+
+  <div class="message-content" *ngFor="let currentMessage of stringList">
+      <img *ngIf="isAnImage(currentMessage)" [src]="currentMessage">
+      <br *ngIf="isAnImage(currentMessage)">
+      <iframe *ngIf="isAnUrlToLoad(currentMessage)" [src]="result | safe"></iframe>
+      <strong *ngIf="notUrl(currentMessage)">{{currentMessage}}</strong>
+      <br *ngIf="isAnUrl(currentMessage)">
+      <a *ngIf="isAnUrl(currentMessage)" href={{currentMessage}} target="_blank">{{currentMessage}}</a>
+      <br *ngIf="isAnUrl(currentMessage)">
+  </div>
+
 </div>
